--- a/Pages/ClinicLettersAndLists.cshtml
+++ b/Pages/ClinicLettersAndLists.cshtml
@@ -4,7 +4,28 @@
 }
 
 <div class="container">
-    <h1>WIP</h1>
+    <div class="row mb-5 g-5">
+        <h1>Clinic Letters and Lists</h1>
+    </div>
+
+    <div class="row mb-5 g-5">
+        <div class="col-md-6">
+            <a type="button" class="btn btn-success" asp-page="ClinicLetterPrint" asp-route-refID=@Model.appointment.RefID asp-route-isEmailOnly=false>Print Letter to Patient</a>
+        </div>
+        <div class="col-md-6">
+            <a type="button" class="btn btn-success" asp-page="WIP">Email Letter to Patient (WIP)</a>
+        </div>
+    </div>
+
+    <div class="row mb-5 g-5">
+        <div class="col-md-6">
+            <a type="button" class="btn btn-success" asp-page="WIP">Print Clinic List (WIP)</a>
+        </div>
+        <div class="col-md-6">
+            <a type="button" class="btn btn-success" asp-page="WIP">Email Clinic List (WIP)</a>
+        </div>
+    </div>
+
 
     <div class="row mb-5 g-5">
         <div class="col-md-6">
