--- a/Pages/AppDetailOptions.cshtml
+++ b/Pages/AppDetailOptions.cshtml
@@ -3,27 +3,26 @@
 @{
 }
 
-<h1 class="text-center">Appointment for @Model.patient.FIRSTNAME @Model.patient.LASTNAME</h1>
-
-
 <div class="container">
     <div class="row mb-5 g-5" class="text-center">
-        <h2>@Model.staffMember.NAME, @Model.clinicVenue.NAME, @Model.appointment.BOOKED_DATE.Value.ToString("dd/MM/yyyy") at @Model.appointment.BOOKED_TIME.Value.ToString("HH:mm")</h2>
+        <h1 class="text-center">Appointment for @Model.patient.FIRSTNAME @Model.patient.LASTNAME</h1>
+    </div>
+
+    <div class="row mb-5 g-5">
+        <h2 class="text-center">@Model.staffMember.NAME, @Model.clinicVenue.NAME (@Model.clinicVenue.FACILITY)</h2>
+        <h2 class="text-center">@Model.appointment.BOOKED_DATE.Value.ToString("dd/MM/yyyy") at @Model.appointment.BOOKED_TIME.Value.ToString("HH:mm")</h2>
     </div>
     
     <div class="row mb-5 g-5">        
-        <div class="col-md-6">
+        <div class="col-md-4 text-center">
             <a type="button" id="btnLetters" class="btn btn-success" asp-page="ClinicLettersAndLists" asp-route-refID=@Model.refID>Print Letters/Clinic Lists</a>
         </div>        
-    </div>
-    <div class="row mb-5 g-5">
-        <div class="col-md-6">
+    
+        <div class="col-md-4 text-center">
             <a type="button" id="btnModify" class="btn btn-success" asp-page="AppModify" asp-route-refID=@Model.refID>Modify Appointment</a>
         </div>
-    </div>
-    
-    <div class="row mb-5 g-5">        
-        <div class="col-md-6">
+          
+        <div class="col-md-4 text-center">
             <button type="button" id="btnCancel" class="btn btn-success">Go Back</button>
         </div>        
     </div>    
